Fix blurry children caused by css filter

--- a/client/packages/uml-glsp/css/base/node.css
+++ b/client/packages/uml-glsp/css/base/node.css
@@ -1,6 +1,7 @@
 .uml-node {
     fill: var(--uml-node);
-    filter: var(--svg-def-filter-drop-shadow);
+    /*TODO: Causes blur effects in children*/
+    /*filter: var(--svg-def-filter-drop-shadow);*/
     stroke-width: 1;
     stroke: var(--uml-border);
 }
